add nino post and vis, upd moe

--- a/_posts/2026-01-15-moe.md
+++ b/_posts/2026-01-15-moe.md
@@ -5,25 +5,26 @@ description: Merging experts in Mixture-of-Experts (MoE) LLMs to compress a 235B
 tags: llm merging mixture-of-experts moe compression empirical-study research
 giscus_comments: false
 date: 2026-01-15
-featured: false
+featured: true
 mermaid:
-  enabled: true
-  zoomable: true
-code_diff: true
-map: true
+  enabled: false
+  zoomable: false
+code_diff: false
+map: false
 chart:
-  chartjs: true
-  echarts: true
-  vega_lite: true
+  chartjs: false
+  echarts: false
+  vega_lite: false
   plotly: true
-tikzjax: true
-typograms: true
+tikzjax: false
+typograms: false
 related_publications: true
+citation: false
 
 authors:
   - name: Boris Knyazev
 
-bibliography: 2026-01-15-moe.bib
+bibliography: refs.bib
 
 # Optionally, you can add a table of contents to your post.
 # NOTES:
@@ -60,24 +61,6 @@ toc:
   - name: Citation
   - name: Footnotes
   - name: References
-  
-# Below is an example of injecting additional post-specific styles.
-# If you use this post as a template, delete this _styles block.
-_styles: >
-  .fake-img {
-    background: #bbb;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    box-shadow: 0 0px 4px rgba(0, 0, 0, 0.1);
-    margin-bottom: 12px;
-  }
-  .fake-img p {
-    font-family: monospace;
-    color: white;
-    text-align: left;
-    margin: 12px 0;
-    text-align: center;
-    font-size: 16px;
-  }
 ---
 
 Large language models (LLMs) are all different in some way. 
@@ -138,8 +121,9 @@ then scaled to 1T parameter models in 2022 by William Fedus et al.<d-cite key="f
     </div> 
 </div>
 <div class="caption" style="text-align: center; margin-top: -35px; margin-bottom: 25px;">
-    MoE from 2022 (Fedus et al.)<d-cite key="fedus2022switch"></d-cite> with $N=4$. 
-The figure shows only one expert (TopK=1) activated per token for clarity. Previously MoEs were often called "Switch Transformers".
+    MoE with $N=4$. Figure from Fedus et al., 2022<d-cite key="fedus2022switch"></d-cite>. 
+The figure shows only one expert (TopK=1) activated per token for clarity. 
+Previously MoEs were often called "Switch Transformers".
 </div>
 
 As illustrated in the Figure above and formally defined below, MoE is a special neural network layer consisting of multiple expert networks ($E$)<d-footnote>I drop the layer index for simplicity as the same equation is used for all layers (with trainable parameters in all layers being different unless shared).</d-footnote> 
@@ -168,7 +152,8 @@ Softmax is applied along each row to produce a probability distribution over the
     </div> 
 </div>
 <div class="caption" style="text-align: center; margin-top: -35px; margin-bottom: 25px;">
-    Simple FFN (left) vs GLU-based FFN used in modern MoEs (right). Source: <a href="https://medium.com/@achronus/glu-a-simple-transformer-improvement-504e31c4252a">medium.com/@achronus</a>.
+    Simple FFN (left) vs GLU-based FFN used in modern MoEs (right). 
+Figure from <a href="https://medium.com/@achronus/glu-a-simple-transformer-improvement-504e31c4252a">medium.com/@achronus</a>.
 </div>
 
 Each expert network $E_i$ is an FFN layer that processes the input $\mathbf{x}$ independently of other experts.
@@ -210,7 +195,7 @@ Although dense Transformers can learn from diverse data well, MoEs more explicit
 This is achieved by having multiple experts that can each specialize in different aspects of the data with the help of the gating mechanism that promotes sparsity.
 
 It has been also shown that MoEs can scale well given a fixed FLOPs budget at inference (see the Figures below).
-Specifically, Tay et al. in 2022<d-cite key="tay2023scaling"></d-cite> showed that
+Specifically, Tay et al. in 2023<d-cite key="tay2023scaling"></d-cite> showed that
 MoEs (or Switch Transformers back then) were one of the few architectures that demonstrated strong scaling trends 
 in both upstream (pretraining) and downstream (fine-tuning) cases.
 
@@ -221,7 +206,7 @@ in both upstream (pretraining) and downstream (fine-tuning) cases.
     </div>
 </div>
 <div class="caption" style="text-align: center; margin-top: -35px; margin-bottom: -25px;">
-    Upstream performance comparison (pretraining).
+    Upstream performance comparison (pretraining). Figure from Tay et al., 2023<d-cite key="tay2023scaling"></d-cite>.
 </div>
 
 <div class="row mt-3 l-body" style="text-align: center; ">
@@ -230,7 +215,7 @@ in both upstream (pretraining) and downstream (fine-tuning) cases.
     </div> 
 </div>
 <div class="caption" style="text-align: center; margin-top: -35px; margin-bottom: 25px;">
-    Downstream performance comparison (fine-tuned). 
+    Downstream performance comparison (fine-tuned). Figure from Tay et al., 2023<d-cite key="tay2023scaling"></d-cite>.
 </div>
 
 As figures above show, Switch Transformers still underperformed dense Transformers at the largest scale.
@@ -247,6 +232,7 @@ They define sparsity as the total number of experts ($N$) divided by TopK showin
 <div class="caption" style="text-align: center; margin-top: -35px; margin-bottom: 25px;">
     Sparsity Scaling Law. Each point corresponds to training a model with a different number of experts and different hyperparameters (depth/width/number of steps/etc.).
     For example, for loss=1.5, sparsity=48 reduces FLOPs by 1.69$\times$, 1.39$\times$ and 1.15$\times$ compared to sparsity=8, 16 and 32, respectively.
+    Figure from the Kimi K2 paper<d-cite key="team2025kimi"></d-cite>.
 </div>
 
 
@@ -266,7 +252,7 @@ I do not consider retraining/fine-tuning (or any further compression) after prun
     </div> 
 </div>
 <div class="caption" style="text-align: center; margin-top: -35px; margin-bottom: 25px;">
-    Expert pruning vs merging (figure from the HC-SMoE paper<d-cite key="chen2025retrainingfree"></d-cite>).
+    Expert pruning vs merging. Figure from the HC-SMoE paper<d-cite key="chen2025retrainingfree"></d-cite>.
 </div>
 
 ### Pruning Experts
@@ -357,7 +343,7 @@ In the next subsection, I describe an important nuance of this step.
 Computing the average of neural network weights can lead to poor results in certain cases<d-footnote>It is actually very surprising that averaging of weights can work at all in some cases, so papers like Model soups<d-cite key="wortsman2022model"></d-cite> were very impactful.</d-footnote>.
 Among such cases is when the networks are trained from different initializations and different data orderings/subsets.
 The difficulty of averaging weights in this case arises because of the different symmetries in neural network weights, 
-primarily **neuron permutation symmetry**. 
+primarily [neuron permutation symmetry](https://bknyaz.github.io/blog/2026/nino/). 
 
 > Neuron permutation symmetry states that the order of neurons in adjacent layers of a neural network layer can be randomly permuted without affecting the overall function of the network<d-cite key="hecht1990algebraic"></d-cite>.
 
@@ -369,17 +355,18 @@ For example, in a 2 layer MLP, we can randomly permute rows of the first layer w
     </div> 
 </div>
 <div class="caption" style="text-align: center; margin-top: -35px; margin-bottom: 25px;">
-    Neural network parameters can be represented as neural graphs to model neuron permutation symmetry<d-cite key="kofinas2024graph"></d-cite>.
+    Neural network parameters can be represented as neural graphs to model neuron permutation symmetry.
+Figure from Kofinas et al., 2024<d-cite key="kofinas2024graph"></d-cite>.
 </div>
 
 Neuron permutation symmetry and other symmetries are studied in the [Weight Space Learning (WSL)](https://weight-space-learning.github.io/) area of machine learning.
 One of the key findings in this area is that permutation alignment of the weights of one network w.r.t. another network prior to averaging can significantly improve the results<d-cite key="ainsworth2022git"></d-cite>.
 To model neuron permutation symmetry better, we proposed neural graphs <d-cite key="kofinas2024graph"></d-cite>
-and recently showed that we can train powerful graph neural networks based on neural graphs<d-cite key="knyazev2024accelerating"></d-cite>.
+and recently showed that we can train powerful [graph neural networks based on neural graphs](https://bknyaz.github.io/blog/2026/nino/)<d-cite key="knyazev2024accelerating"></d-cite>.
 
 When training MoE LLMs, each expert network $E_i$ is initialized randomly and trained on different data subsets (because of the gating mechanism).
 To address the permutation issue, MC-SMoE and HC-SMoE align expert weights by either expert weights or hidden activations.
-This can be done, for example, using [scipy.optimize.linear_sum_assignment](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.linear_sum_assignment.html) function that implements the Hungarian algorithm to solve the assignment problem.
+This can be done, for example, using the [scipy.optimize.linear_sum_assignment](https://docs.scipy.org/doc/scipy/reference/generated/scipy.optimize.linear_sum_assignment.html) function that implements the Hungarian algorithm to solve the assignment problem.
 I show a pseudocode for expert merging with improved permutation alignment in the next section.
 
 ## REAM
@@ -486,8 +473,8 @@ The proposed REAM method is evaluated compared to the leading expert pruning met
 and leading expert merging method (HC-SMoE)<d-cite key="chen2025retrainingfree"></d-cite>.
 
 🤗Qwen3 models compressed with HC-SMoE/REAP/REAM are released at 
-[huggingface-models](https://huggingface.co/collections/SamsungSAILMontreal/qwen3-moe).
-Details about the evaluation are provided at [huggingface-details](https://huggingface.co/SamsungSAILMontreal/Qwen3-30B-A3B-Instruct-2507-REAM).
+[huggingface-qwen3-moe](https://huggingface.co/collections/SamsungSAILMontreal/qwen3-moe).
+Details about the evaluation are provided at [huggingface-qwen3-ream](https://huggingface.co/SamsungSAILMontreal/Qwen3-30B-A3B-Instruct-2507-REAM).
 
 ### Benchmarks
 
@@ -604,7 +591,7 @@ The results are shown in the Figure below with the average scores across MC ($x$
     }    
   ],
   "layout": {
-    "title": "Pareto Tradeoff Between MC and Generation",
+    "title": { "text": "Pareto Tradeoff Between MC and Generative tasks", "size": 20 },
     "xaxis": {
       "title": { "text": "MC tasks score (%)" },
       "range": [45, 77]
@@ -685,7 +672,7 @@ so further tuning may improve the results.
 
 ### Qwen3-Next-80B-A3B
 
-**Qwen3-Next-80B-A3B-Instruct-2507** is a newer MoE model with a similar architecture as Qwen3-30B-A3B, but with 
+**Qwen3-Next-80B-A3B-Instruct** is a newer MoE model with a similar architecture as Qwen3-30B-A3B, but with 
 512 experts and TopK=10 instead of 128 and TopK=8, respectively. 
 Even though the total number of experts is increased 4x, the number of activated parameters is mainly affected by TopK.
 And although TopK is also increased in this model, to keep the number of activated parameters around 3B,
@@ -694,7 +681,7 @@ The results of compressing this model from 512 to 384 experts are shown below.
 Other than the number of experts and TopK, the same hyperparameters and calibration data as for 
 Qwen3-30B-A3B-Instruct-2507 are used in all methods.
 
-**Table 6. GEN results for Qwen3-Next-80B-A3B-Instruct-2507.**
+**Table 6. GEN results for Qwen3-Next-80B-A3B-Instruct.**
 
 | Model    | N   | IFEval   | AIME25   | GSM8K    | GPQA-D   | HumanEval | LiveCodeBench | AVG      |
 |----------|-----|----------|----------|----------|----------|-----------|---------------|----------|
@@ -702,7 +689,7 @@ Qwen3-30B-A3B-Instruct-2507 are used in all methods.
 | REAP     | 384 | 91.0     | 66.7     | **78.8** | **37.9** | 91.5      | **45.0**      | 68.5     |
 | REAM     | 384 | **91.5** | **73.3** | 78.4     | 36.9     | **92.7**  | 42.9          | **69.3** |
 
-On Qwen3-Next-80B-A3B-Instruct-2507, REAM outperforms REAP on 3 out of 6 GEN tasks and on average.
+On Qwen3-Next-80B-A3B-Instruct, REAM outperforms REAP on 3 out of 6 GEN tasks and on average.
 HC-SMoE was not evaluated on this model, since it underperformed in previous experiments.
 Notably, the original Qwen3-Next model has almost the same GEN performance as its previous much larger (Qwen3-235B-A22B) variant (see Table 5 above),
 while having only 3B activated parameters instead of 22B. This further confirms the effectiveness of increasing MoE sparsity.
@@ -730,7 +717,23 @@ However, only using the weights of experts have led to poor results in my experi
 Future work may explore how to use [Weight Space Learning (WSL)](https://weight-space-learning.github.io/)
 and specifically methods based on neural graphs<d-cite key="kofinas2024graph,knyazev2024accelerating"></d-cite> to better perform merging without relying on calibration data.
 
-## Citation
+**More REAM Models and Code.**
+We continue to release more REAM-compressed models such as [Qwen3-Coder-Next](https://huggingface.co/bknyaz/Qwen3-Coder-Next-REAM).
+We also plan to release the code for REAM at [SamsungSAILMontreal/ream](https://github.com/SamsungSAILMontreal/ream) in the near future.
+
+### License
+
+Diagrams and text are licensed under Creative Commons Attribution [CC-BY 4.0](https://creativecommons.org/licenses/by/4.0/), 
+unless noted otherwise. 
+The figures that have been reused from other sources do not fall under this license and can be recognized by a note in their caption: "Figure from …".
+
+### Acknowledgements
+
+Minjoong Lee and Hoshik Lee from Samsung DS provided initial project recommendations, feedback and infrastructure support.
+The experiments were in part enabled by computational resources provided by Calcul Québec and
+Compute Canada.
+
+### Citation
 
 ```bibtex
 @misc{knyazev2026compressing,
@@ -740,5 +743,3 @@ and specifically methods based on neural graphs<d-cite key="kofinas2024graph,kny
   url={https://bknyaz.github.io/2026/01/15/moe/}
 }
 ```
-
-**Use of LLMs**: LLMs were used to slightly improve the writing and formatting of this blog post.
