--- a/assets/bibliography/refs.bib
+++ b/assets/bibliography/refs.bib
@@ -137,7 +137,7 @@ url={https://arxiv.org/abs/2410.08589},
   author={Lim, Derek and Maron, Haggai and Law, Marc T and Lorraine, Jonathan and Lucas, James},
   booktitle={ICLR},
   year={2024},
-  url={2312.04501}
+  url={https://arxiv.org/abs/2312.04501}
 }
 
 @inproceedings{kofinas2024graph,
@@ -155,4 +155,109 @@ url={https://arxiv.org/abs/2410.08589},
   booktitle={ICLR},
   year={2025},
   url={https://arxiv.org/abs/2409.04434}
+}
+
+@inproceedings{sukhbaatar2024branch,
+  title={Branch-Train-MiX: Mixing Expert LLMs into a Mixture-of-Experts LLM},
+  author={Sukhbaatar, Sainbayar and Golovneva, Olga and Sharma, Vasu and Xu, Hu and Lin, Xi Victoria and Roziere, Baptiste and Kahn, Jacob and Li, Shang-Wen and Yih, Wen-tau and Weston, Jason E and others},
+  booktitle={First Conference on Language Modeling (COLM)},
+  year={2024},
+  url={https://arxiv.org/abs/2403.07816}
+}
+
+@inproceedings{zhou2025mergeme,
+  title={MergeME: Model Merging Techniques for Homogeneous and Heterogeneous MoEs},
+  author={Zhou, Yuhang and Karamanolakis, Giannis and Soto, Victor and Rumshisky, Anna and Kulkarni, Mayank and Huang, Furong and Ai, Wei and Lu, Jianhua},
+  booktitle={Proceedings of the 2025 Conference of the Nations of the Americas Chapter of the Association for Computational Linguistics: Human Language Technologies (Volume 1: Long Papers)},
+  pages={2315--2328},
+  year={2025},
+  url={https://arxiv.org/abs/2502.00997}
+}
+
+@inproceedings{ilharco2023editing,
+  title={Editing Models with Task Arithmetic},
+  author={Ilharco, Gabriel and Ribeiro, Marco Tulio and Wortsman, Mitchell and Schmidt, Ludwig and Hajishirzi, Hannaneh and Farhadi, Ali},
+  booktitle={ICLR},
+  year={2023},
+  url={https://arxiv.org/abs/2212.04089}
+}
+
+@article{yadav2023ties,
+  title={TIES-Merging: Resolving Interference When Merging Models},
+  author={Yadav, Prateek and Tam, Derek and Choshen, Leshem and Raffel, Colin A and Bansal, Mohit},
+  journal={Advances in Neural Information Processing Systems},
+  volume={36},
+  pages={7093--7115},
+  year={2023},
+  url={https://arxiv.org/abs/2306.01708}
+}
+
+@inproceedings{stoica2025model,
+  title={Model merging with SVD to tie the Knots},
+  author={Stoica, George and Ramesh, Pratik and Ecsedi, Boglarka and Choshen, Leshem and Hoffman, Judy},
+  year={2025},
+  organization={ICLR},
+  url={https://arxiv.org/abs/2410.19735}
+}
+
+@inproceedings{gargiulo2025task,
+  title={Task singular vectors: Reducing task interference in model merging},
+  author={Gargiulo, Antonio Andrea and Crisostomi, Donato and Bucarelli, Maria Sofia and Scardapane, Simone and Silvestri, Fabrizio and Rodola, Emanuele},
+  booktitle={Proceedings of the Computer Vision and Pattern Recognition Conference},
+  pages={18695--18705},
+  year={2025},
+  url={https://arxiv.org/abs/2412.00081}
+}
+
+@inproceedings{frankle2020linear,
+  title={Linear mode connectivity and the lottery ticket hypothesis},
+  author={Frankle, Jonathan and Dziugaite, Gintare Karolina and Roy, Daniel and Carbin, Michael},
+  booktitle={International conference on machine learning},
+  pages={3259--3269},
+  year={2020},
+  organization={PMLR},
+  url={https://arxiv.org/abs/1912.05671}
+}
+
+@inproceedings{gupta2018shampoo,
+  title={Shampoo: Preconditioned stochastic tensor optimization},
+  author={Gupta, Vineet and Koren, Tomer and Singer, Yoram},
+  booktitle={International Conference on Machine Learning},
+  pages={1842--1850},
+  year={2018},
+  organization={PMLR},
+  url={https://arxiv.org/abs/1802.09568}
+}
+
+@inproceedings{vyas2025soap,
+  title={SOAP: Improving and Stabilizing Shampoo using Adam for Language Modeling},
+  author={Vyas, Nikhil and Morwani, Depen and Zhao, Rosie and Shapira, Itai and Brandfonbrener, David and Janson, Lucas and Kakade, Sham M},
+  booktitle={ICLR},
+  year={2025},
+  url={https://arxiv.org/abs/2409.11321}
+}
+
+@article{jordan2024muon,
+  title={Muon: An optimizer for hidden layers in neural networks, 2024},
+  author={Jordan, Keller and Jin, Yuchen and Boza, Vlado and Jiacheng, You and Cesista, Franz and Newhouse, Laker and Bernstein, Jeremy},
+  year={2024},
+  url={https://kellerjordan.github.io/posts/muon},
+}
+
+@inproceedings{jang2023learning,
+  title={Learning to boost training by periodic nowcasting near future weights},
+  author={Jang, Jinhyeok and Yun, Woo-han and Kim, Won Hwa and Yoon, Youngwoo and Kim, Jaehong and Lee, Jaeyeon and Han, ByungOk},
+  booktitle={International Conference on Machine Learning},
+  pages={14730--14757},
+  year={2023},
+  organization={PMLR},
+  url={https://proceedings.mlr.press/v202/jang23b.html}
+}
+
+@article{metz2022velo,
+  title={Velo: Training versatile learned optimizers by scaling up},
+  author={Metz, Luke and Harrison, James and Freeman, C Daniel and Merchant, Amil and Beyer, Lucas and Bradbury, James and Agrawal, Naman and Poole, Ben and Mordatch, Igor and Roberts, Adam and others},
+  journal={arXiv preprint arXiv:2211.09760},
+  year={2022},
+  url={https://arxiv.org/abs/2211.09760}
 }
