--- a/_posts/2025-09-30-nino.md
+++ b/_posts/2025-09-30-nino.md
@@ -39,7 +39,7 @@ toc:
     subsections:
         - name: Neuron Permutation Symmetry
         - name: Neuron Permutation Symmetry in Transformers
-  - name: Results that Stands Out
+  - name: Results that Stand Out
   - name: Learning to Optimize, Revisited
   - name: Conclusion
   - name: Citation
@@ -70,7 +70,7 @@ Motivated by Kofinas et al.<d-cite key="kofinas2024graph"></d-cite>, we model ne
 and use a graph neural network (GNN) to predict how weights will evolve. 
 This lets us "nowcast" future parameters and reduce the number of steps required to reach the same performance metric.
 
-> NiNo is essentially a GNN that takes a history of past parameter values along the optimization trajectory (which can be obtained by Adam or another optimizer) and making a jump by predicting future parameter values. 
+> NiNo is a GNN-based model that takes a history of past parameter values along the optimization trajectory (obtained with Adam or another optimizer) and makes a jump by predicting future parameter values. 
 After making the prediction, optimization is continued with Adam, then followed by NiNo's another prediction and so on. 
 
 This periodic nowcasting idea is borrowed from Weight Nowcaster Network (WNN)<d-cite key="jang2023learning"></d-cite> 
@@ -333,7 +333,7 @@ To give some context in terms of optimization runs, below is Figure 1 reproduced
   ],
   "layout": {
     "title": {
-      "text": "NiNo achieves ~2x speedup compared to Adam.",
+      "text": "NiNo achieves ~2× speedup compared to Adam.",
       "font": {
         "size": 20
       }
@@ -441,15 +441,15 @@ To give some context in terms of optimization runs, below is Figure 1 reproduced
 
 The figure shows the results of Adam **without** and **with** nowcasting using our NiNo.
 "Nowcast" steps are shown at step 1000, 2000 and 11,000 for visualization purposes, but this step is applied every 1000 steps in our experiments.
-Note the **~2x reduction** of the number of steps required by NiNo to achieve the same validation perplexity as by Adam.
-The optimization task in this example is autoregressive next-token prediction on the wiki dataset that NiNo has not seen during its training.
+Note the **~2× reduction** of the number of steps required by NiNo to achieve the same validation perplexity as by Adam.
+The optimization task in this example is autoregressive next-token prediction on the WikiText103 dataset that NiNo has not seen during its training.
 
 ## NiNo Details
 
 As NiNo is a neural network (namely, a GNN), it needs to be trained first before we can use it to speed up optimization. 
 To do so, we collected and publicly released a 🤗[dataset of checkpoints](https://huggingface.co/datasets/SamsungSAILMontreal/nino_metatrain) with optimization trajectories on 2 vision and 2 language tasks. 
 Even though collecting these checkpoints and training NiNo is computationally expensive, 
-this single-time cost is amortized meaning the same trained NiNo can be potentially used on millions of tasks to eventually save much more costs.
+this one-time cost is amortized, meaning the same trained NiNo can potentially be used across many tasks, ultimately reducing total training cost.
 
 
 ### Neuron Permutation Symmetry
@@ -457,8 +457,8 @@ this single-time cost is amortized meaning the same trained NiNo can be potentia
 Developing a strong parameter nowcasting model requires many specific design choices and, perhaps most critically, 
 accurate modeling of **neuron permutation symmetry**<d-footnote>Modeling neuron permutation symmetry is imposing a strong inductive bias similarly to using
 convolution for images. So our model can be used in more diverse tasks and should be able to learn parameter prediction rules that generalize better with fewer samples compared to models that do not explicitly take this symmetry into account.</d-footnote>.
-Neuron permutation symmetry states that the order of neurons in adjacent layers of a neural network layer can be 
-randomly permuted without affecting the overall function of the network<d-cite key="hecht1990algebraic"></d-cite>.
+Neuron permutation symmetry states that the order of neurons in adjacent layers of a neural network can be
+permuted in certain ways without affecting the overall function of the network<d-cite key="hecht1990algebraic"></d-cite>.
 To better understand this symmetry, let me introduce a simple example based on a two layer neural network with weights $$ \mathbf{W}_1 $$, $$ \mathbf{W}_2 $$ 
 and an element-wise activation function σ. Given input $\mathbf{x}$, the output of such a network can be expressed as:
 
@@ -470,14 +470,14 @@ We can permute the neurons in the hidden layer by applying a permutation matrix 
 the inverse permutation to the weights in layer 2 (permuting columns), resulting in:
 
 $$
-f(\mathbf{x}) = (\mathbf{W}_2 \  P^{-1}) \ \sigma(P \ \mathbf{W}_1 \  x).
+f(\mathbf{x}) = (\mathbf{W}_2 \  P^{-1}) \ \sigma(P \ \mathbf{W}_1 \  \mathbf{x}).
 $$
 
-Given the orthogonality property of permutation matrices, $$ \mathbf{P}^{-1}\mathbf{P} = \mathbf{I}$$, 
+Given the orthogonality property of permutation matrices, $$ \mathbf{P}^{-1} = \mathbf{P}^T$$,
 and that the activation function σ is element-wise, we can see that the output of the network remains unchanged:
 
 $$
-f(\mathbf{x}) = \mathbf{W}_2 \  P^{-1} \ \sigma ( \mathbf{P} \ \mathbf{W}_1 \ x) = \mathbf{W}_2 \  \mathbf{P}^{-1} \mathbf{P} \ \sigma (\mathbf{W}_1 \ x) = \mathbf{W}_2 \ \sigma(\mathbf{W}_1 \ \mathbf{x}).
+f(\mathbf{x}) = \mathbf{W}_2 \  \mathbf{P}^{-1} \ \sigma ( \mathbf{P} \ \mathbf{W}_1 \ \mathbf{x}) = \mathbf{W}_2 \  \mathbf{P}^{-1} \mathbf{P} \ \sigma (\mathbf{W}_1 \ \mathbf{x}) = \mathbf{W}_2 \ \sigma(\mathbf{W}_1 \ \mathbf{x}).
 $$
 
 Let me now visualize this symmetry using a simple demo, where the output is dynamically computed given the current order of neurons for some fixed input. 
@@ -525,7 +525,7 @@ You can reset the demo to the original state by clicking the "Reset" button.
 
 To make NiNo work well for LLMs and Transformers in general, 
 it was critical to carefully construct the neural graph for multi-head self-attention, 
-making it stand out compared to WNN (that ignores the neural network structure). 
+making it stand out compared to WNN (which ignores the neural network structure).
 This is a tricky part as the illustration below shows, but we implemented it for many different Transformer layers.
 
 <div class="row mt-3 l-body figure-container-desktop">
@@ -540,9 +540,9 @@ This is a tricky part as the illustration below shows, but we implemented it for
 Visualizing the permutation symmetry in Transformers using a demo is also possible, 
 but I leave it for future work (or please submit a PR [to this blog post](https://github.com/bknyaz/bknyaz.github.io/tree/master/_posts)).
 
-## Results that Stands Out
+## Results that Stand Out
 
-- NiNo achieves a roughly ~2x speedup compared to Adam, which is generally unreachable by manually-designed optimizers (which are considered remarkable if a 1.2–1.3x speedup is achieved).
+- NiNo achieves roughly a 2× speedup compared to Adam, which is rarely achieved by manually designed optimizers in practice<d-footnote>Which are considered remarkable if a 1.2–1.3× speedup is achieved.</d-footnote>.
 - NiNo speeds up optimization across 9 vision and language tasks that we systematically evaluated, achieving the same validation performance (accuracy or perplexity) as Adam in about half the steps on average across these tasks (see Table 2 in the paper).
 - NiNo continues to speed up training for larger models beyond our main 9 tasks that are much larger than the models in the training checkpoints used to train NiNo (see Table 4 in the paper).
 
@@ -580,13 +580,13 @@ for step in range(10000):
 
 ## Learning to Optimize, Revisited
 
-Our work connects to the broader "learning to optimize" literature, with seminal Luke Metz's et al. works such as VeLO<d-cite key="metz2022velo"></d-cite>. 
+Our work connects to the broader "learning to optimize" literature, such as VeLO<d-cite key="metz2022velo"></d-cite>. 
 Unlike many learned optimizers that struggle with cost, stability or show only a 
-~1.2–1.3x speedup<d-footnote>While a ~1.2–1.3x speedup is remarkable, in practice it usually does not justify the immense amount of extra work (e.g. efficient distributed implementation, tuning, potential instabilities especially in mixed/low-bit precision, investigating unexpected side effects like overfitting or poor generalization) that is required for actual large-scale usefulness.</d-footnote>, 
+~1.2–1.3× speedup<d-footnote>While a ~1.2–1.3× speedup is remarkable, in practice it usually does not justify the immense amount of extra work (e.g. efficient distributed implementation, tuning, potential instabilities especially in mixed/low-bit precision, investigating unexpected side effects like overfitting or poor generalization) that is required for actual large-scale usefulness.</d-footnote>, 
 NiNo is conceptually lightweight and stable, because it is only applied every 1,000 steps (by default), 
 while for all the other steps any base optimizer, such as Adam, can be applied to allow for stable convergence. 
 At the same time, recent learned optimizers such as our recent 
-[Celo](https://arxiv.org/abs/2501.12670) and [μLO](https://arxiv.org/abs/2406.00153) **that will be presented at ICLR 2026 🎉🎉🎉**,
+[Celo](https://arxiv.org/abs/2501.12670) and [μLO](https://arxiv.org/abs/2406.00153) **that will be presented at ICLR 2026**,
 make a significant step in improving learned optimizers and making them more cost-effective and stable (i.e. without big loss spikes) to train and use.
 
 <div class="row mt-3 l-body figure-container-desktop">
