--- a/_posts/2026-01-15-moe.md
+++ b/_posts/2026-01-15-moe.md
@@ -345,7 +345,7 @@ Among such cases is when the networks are trained from different initializations
 The difficulty of averaging weights in this case arises because of the different symmetries in neural network weights, 
 primarily [neuron permutation symmetry](https://bknyaz.github.io/blog/2025/nino/).
 
-> Neuron permutation symmetry states that the order of neurons in adjacent layers of a neural network layer can be randomly permuted without affecting the overall function of the network<d-cite key="hecht1990algebraic"></d-cite>.
+> Neuron permutation symmetry states that the order of neurons in adjacent layers of a neural network can be permuted in certain ways without affecting the overall function of the network<d-cite key="hecht1990algebraic"></d-cite>.
 
 For example, in a 2 layer MLP, we can randomly permute rows of the first layer weights and permute in the same order the corresponding columns of the second layer weights without changing the function computed by the MLP.
 
