--- a/_posts/2025-09-30-nino.md
+++ b/_posts/2025-09-30-nino.md
@@ -587,7 +587,7 @@ NiNo is conceptually lightweight and stable, because it is only applied every 1,
 while for all the other steps any base optimizer, such as Adam, can be applied to allow for stable convergence. 
 At the same time, recent learned optimizers such as our recent 
 [Celo](https://arxiv.org/abs/2501.12670) and [μLO](https://arxiv.org/abs/2406.00153) **that will be presented at ICLR 2026**,
-make a significant step in improving learned optimizers and making them more cost-effective and stable (i.e. without big loss spikes) to train and use.
+make a significant step in improving learned optimizers<d-footnote>In particular, Celo and μLO make learned optimizers more cost-effective and stable (i.e. without big loss spikes) to train and use.</d-footnote>.
 
 <div class="row mt-3 l-body figure-container-desktop">
    <div class="col-sm mt-3 mt-md-0" style="text-align: center;">
@@ -602,7 +602,7 @@ make a significant step in improving learned optimizers and making them more cos
 
 ## Conclusion
 
-Even though NiNo shows great speedups, it requires further work, so we see many exciting paths ahead:
+Even though NiNo shows great speedups, it requires further work, for example:
 
 - Making NiNo's step more scalable (especially memory-efficient) to larger models - currently the message passing step in its GNN is a bottleneck;
 - Improving speedups on larger tasks - for tasks with >1B parameter models we currently observe no speedup;
