--- a/_posts/2025-09-30-nino.md
+++ b/_posts/2025-09-30-nino.md
@@ -16,7 +16,6 @@ chart:
   echarts: false
   vega_lite: false
   plotly: true
-d3: true
 tikzjax: false
 typograms: false
 related_publications: true
@@ -455,8 +454,7 @@ this one-time cost is amortized, meaning the same trained NiNo can potentially b
 ### Neuron Permutation Symmetry
 
 Developing a strong parameter nowcasting model requires many specific design choices and, perhaps most critically, 
-accurate modeling of **neuron permutation symmetry**<d-footnote>Modeling neuron permutation symmetry is imposing a strong inductive bias similarly to using
-convolution for images. So our model can be used in more diverse tasks and should be able to learn parameter prediction rules that generalize better with fewer samples compared to models that do not explicitly take this symmetry into account.</d-footnote>.
+accurate modeling of **neuron permutation symmetry**<d-footnote>Modeling neuron permutation symmetry imposes a strong inductive bias similarly to using convolution for images. So our model can be used in more diverse tasks and should be able to learn parameter prediction rules that generalize better with fewer samples compared to models that do not explicitly take this symmetry into account.</d-footnote>.
 Neuron permutation symmetry states that the order of neurons in adjacent layers of a neural network can be
 permuted in certain ways without affecting the overall function of the network<d-cite key="hecht1990algebraic"></d-cite>.
 To better understand this symmetry, let me introduce a simple example based on a two layer neural network with weights $$ \mathbf{W}_1 $$, $$ \mathbf{W}_2 $$ 
