--- a/_posts/2026-01-15-moe.md
+++ b/_posts/2026-01-15-moe.md
@@ -740,6 +740,6 @@ Compute Canada.
   title={REAM: Compressing Mixture-of-Experts LLMs},
   author={Boris Knyazev},
   year={2026},
-  url={https://bknyaz.github.io/2026/01/15/moe/}
+  url={https://bknyaz.github.io/blog/2026/moe/}
 }
 ```
